--- a/Ejercicios HTML Javascript/html/JQUERY - ul seleccionar li enmedio.html
+++ b/Ejercicios HTML Javascript/html/JQUERY - ul seleccionar li enmedio.html
@@ -7,7 +7,9 @@
 $(document).ready(function(){
     $("button").click(function(){
         var a = Math.floor(parseInt($("ul li").length/2 +1));
-        $("ul li:nth-child("+ a + ")").hide();
+        //$("ul li:nth-child("+ a + ")").hide();
+        $("ul li:odd").hide();
+        $("ul li:even").css("color","red");
     });
 });
 </script>
@@ -25,6 +27,7 @@ $(document).ready(function(){
 		<li>8</li>
 		<li>9</li>
 		<li>10</li>
+		<li>11</li>
 	</ul>
 	<button id="boton"> Borrar </button>
 </body>
