Archivos / Enviar imatge

--- a/PHP/proba div.html
+++ b/PHP/proba div.html
@@ -4,15 +4,24 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style type="text/css">
-		div { border: 1px solid black; }
+		div { border: 1px solid black; width:900px; height: 500px;
+			  display: inline-block;
+			  text-align: center;}
+
+		div div { width: 200px; height: 300px; text-align: left; display: block; float: left; margin: 0 auto;}
 	</style>
 </head>
 <body>
 	<div>
-		<p>dddddddddddddddd
-		ddddddddddddd
-		dddddddddd<br>
-		rrrrrrrrrrrrrrrrr<p>;
+		<div>fff dfd </div>
+		<div><ul>
+				<li>ee</li>
+				<li>ee</li>
+				<li>ee</li>
+				<li>ee</li>
+			</ul>
+			</div>
+		<div>fff</div>
 	</div>
 </body>
 </html>
